# servicedoc

./: .env.example  .gitignore  pyproject.toml
docs/: API.md  CHANGELOG.md  CONFIG.md  ER.md  README.md  TESTS.md
servicedoc/: __init__.py  api.py  config.py  main.py
servicedoc/ai/: __init__.py  client.py  glossary.py  prompts.py  rate_limiter.py
servicedoc/coverage/: parser.py
servicedoc/docs/: changelog.py  json_example.py  regenerate_markers.py  renderer.py
servicedoc/docs/templates/: API.md.j2  API_DIR.md.j2  API_GRPC.md.j2  CHANGELOG.md.j2  ER.md.j2  MESSAGES.md.j2  README.md.j2  RELEASE_NOTES.md.j2  SYMBOL_INDEX.md.j2  TESTS.md.j2
servicedoc/er/: detector.py  migrations.py  renderer.py  svg.py
servicedoc/git/: __init__.py  cloner.py  diff.py  history.py
servicedoc/models/: __init__.py  coverage.py  docs.py  er.py  pipeline.py  proto.py  repo.py  symbols.py
servicedoc/parsers/: __init__.py  base.py  registry.py
servicedoc/parsers/go/: dep_parser.py  parser.py  queries.py
servicedoc/parsers/python/: dep_parser.py  parser.py  queries.py
servicedoc/pipeline/: __init__.py  base.py  runner.py
servicedoc/pipeline/stages/: s01_ingest.py  s02_deps.py  s03_parse.py  s04_proto.py  s05_comments.py  s06_ai_enrich.py  s07_tests.py  s08_er.py  s09_docs.py
servicedoc/proto/: parser.py
servicedoc/utils/: cache.py  fs.py  manifest.py  retry.py  source_links.py
tests/: conftest.py
tests/integration/: test_pipeline_kagent.py
tests/unit/: test_changelog_dedup.py  test_er_detector.py  test_go_parser.py  test_proto_parser.py  test_python_parser.py
(+7 files in other folders)
